DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tomcat
  namespace: dev-ns
spec:
  selector:
   matchLabels:
     app: tomcat
  template:
    metadata:
      name: tomcat-nginx
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: deepakdev123/tomcat_deploy:2.2.2
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 128Mi
