basic_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels: 
    app: jenkins
spec:
  volumes:
    - name: "jenkins-data"
      hostPath:
        path: "/root/jenkins"
  nodeSelector:
    size: large
  containers:
  - name: jenkins
    image: jenkins/jenkins:lts
    volumeMounts:
      - mountPath: "/var/jenkins_home"
        name: "jenkins-data"
