pod_aff_hard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: dev-ns
spec:
  replicas: 3
  selector:
   matchLabels:
     app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: tomcat-nginx
      labels:
        app: tomcat
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
               matchExpressions:
               - key: app
                 operator: In
                 values:
                 - tomcat
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: tomcat
          image: deepakdev123/tomcat_deploy:2.2.2
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 128Mi
