secretdemo.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
  labels:
    name: secret-test
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: myfile 
  containers:
  - name: tomcat
    image: deepakdev123/tomcat_deploy:5.5.5
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: "/usr/local/tomcat/webapps/"
