tomcat1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: dev-ns
spec:
  replicas: 3
  selector:
   matchLabels:
     app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: tomcat
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0
