privateimage.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
  labels:
    app: tomcat
spec:
  containers:
  - name: private-tomcat-container
    image: deepakdev123/tomcat_deploy:5.5.5
  imagePullSecrets:
  - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-loadb
spec:
  selector:
    app: tomcat
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
