tomcathelmfile.yml
---
# Source: tomcat/templates/tomcathelm.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  selector:
    app: tomcat
  type: ClusterIP
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
---
# Source: tomcat/templates/tomcathelm.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mytomcat
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: tomcat
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: deepakdev123/tomcat_deploy:5.5.5
