tomcat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tomcat-loadb
              port:
                number: 8080
